k8s/namespaces/media/suwayomi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suwayomi
  namespace: media
  labels:
    app.kubernetes.io/name: suwayomi
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: suwayomi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: suwayomi
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: suwayomi
          # renovate: datasource=docker depName=ghcr.io/suwayomi/tachidesk
          image: ghcr.io/suwayomi/tachidesk:latest@sha256:1fac27c387dc2ea9949e1a01ad7f6d6de9d72d3988338a95476748e5c45c4582
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4567
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
              ephemeral-storage: "5Gi"
          livenessProbe:
            tcpSocket:
              port: 4567
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 4567
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: media
              mountPath: /home/suwayomi/.local/share/Tachidesk/downloads
            - name: config
              mountPath: /home/suwayomi/.local/share/Tachidesk
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: suwayomi-media
        - name: config
          persistentVolumeClaim:
            claimName: suwayomi-config
