k8s/namespaces/media/suwayomi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suwayomi
  namespace: media
  labels:
    app.kubernetes.io/name: suwayomi
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: suwayomi
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 4567
      targetPort: 4567
      protocol: TCP
      name: suwayomi
  type: ClusterIP
