k8s/namespaces/media/suwayomi/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: suwayomi
  namespace: media
  labels:
    app.kubernetes.io/name: suwayomi
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: suwayomi
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
      ports:
        - port: 4567
          protocol: TCP
  egress:
    - {}
